added location to the nav bar with location icon

--- a/src/components/nav-bar/nav-bar.css
+++ b/src/components/nav-bar/nav-bar.css
@@ -12,3 +12,8 @@
     justify-content: flex-end;
     align-items: center;
 }
+
+.location {
+    height: calc(--nav-size);
+    position: absolute;
+}
