--- a/src/index.css
+++ b/src/index.css
@@ -27,9 +27,9 @@ code {
 }
 
 .light {
-    --bg: #EDFFEC;
+    --bg: #B2E6D4;
     --bg-accent1: #9792E3;
-    --bg-accent2: #E5D0CC;
+    --bg-accent2: #EDF2EF;
     --bg-accent3: #61E786;
     --text-color: #242526;
     --bg-url: url('https://thumbs.dreamstime.com/b/rainbow-clouds-background-sun-cloud-pastel-colored-185464716.jpg');
