made completely responsive

--- a/src/components/nav-bar/nav-bar.css
+++ b/src/components/nav-bar/nav-bar.css
@@ -17,3 +17,9 @@
     height: calc(--nav-size);
     position: absolute;
 }
+
+@media (max-width: 640px) {
+    .location {
+        display: none;
+    }
+}
