--- a/src/components/daily-forecast/daily-forecast.css
+++ b/src/components/daily-forecast/daily-forecast.css
@@ -1,4 +1,4 @@
-.daily-forecast-items {
+.daily-forecast__items {
     background: var(--bg-accent3);
     border-radius: 5px;
     display: grid;
@@ -29,7 +29,7 @@
 }
 
 @media (max-width: 640px) {
-    .daily-forecast {
+    .daily-forecast__items {
         grid-template-columns: 1fr;
     }
 }
